add api routes
